Refactor: Passage de bougies Ã  bijoux fantaisie - prÃ©paration des modifications

--- a/templates/catalogue/liste.html.twig
+++ b/templates/catalogue/liste.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {% if sousCategorie %}
+    {% if sousCategorie and categorie %}
         {{ sousCategorie.nom }} - {{ categorie.nom }}
+    {% elseif sousCategorie %}
+        {{ sousCategorie.nom }}
     {% elseif categorie %}
         {{ categorie.nom }}
     {% endif %} - SoSand
