--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}So'Sand{% endblock %}</title>
+        <title>{% block title %}Studio Pipelette{% endblock %}</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <!-- Favicon -->
@@ -193,7 +193,7 @@
                     <a href="{{ path('app_home') }}" class="text-decoration-none">
                         <img src="{{ asset('assets/img/logo_petit_blanc.png') }}" alt="Logo" style="height: 120px;" class="mb-4">
                     </a>
-                    <p>Découvrez nos bougies artisanales, conçues avec soin et passion. Pour une ambiance chaleureuse et unique.</p>
+                    <p>Découvrez nos bijoux artisanaux, conçus avec soin et passion.</p>
                     {% if societe.adresse %}
                         <p class="mb-2">
                             <i class="fa fa-map-marker-alt text-primary mr-3"></i>
@@ -248,7 +248,7 @@
             <div class="row border-top border-light mx-xl-5 py-4">
                 <div class="col-md-6 px-xl-0">
                     <p class="mb-md-0 text-center text-md-left text-dark">
-                        &copy; <a class="text-dark font-weight-semi-bold" href="#">So'Sand</a>. Tous droits réservés. Conçu par
+                        &copy; <a class="text-dark font-weight-semi-bold" href="#">Studio Pipelette</a>. Tous droits réservés. Conçu par
                         <a class="text-dark font-weight-semi-bold" href="https://www.code65.fr">CODE 65</a><br>
                     </p>
                 </div>
