--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,4 +1,4 @@
-<p>Nouvelle demande de contact depuis le site So'Sand :</p>
+<p>Nouvelle demande de contact depuis le site Studio Pipelette :</p>
 
 <ul>
     <li><strong>Prénom :</strong> {{ prenom }}</li>
