--- a/templates/emails/shipment_notification.html.twig
+++ b/templates/emails/shipment_notification.html.twig
@@ -1,6 +1,6 @@
 <p>Bonjour {{ user.prenom }} {{ user.nom }},</p>
 
-<p>Votre commande So'Sand (n° {{ order.id }}) vient d'être <strong>expédiée</strong>.</p>
+<p>Votre commande Studio Pipelette (n° {{ order.id }}) vient d'être <strong>expédiée</strong>.</p>
 
 <p>
     <strong>Transporteur :</strong> Mondial Relay<br>
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-    Merci pour votre confiance et à très bientôt sur So'Sand.
+    Merci pour votre confiance et à très bientôt sur Studio Pipelette.
 </p>
 
-<p>L'équipe So'Sand</p>
+<p>L'équipe Studio Pipelette</p>
