--- a/templates/newsletter/unsubscribe.html.twig
+++ b/templates/newsletter/unsubscribe.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Désinscription newsletter - SoSand{% endblock %}
+{% block title %}Désinscription newsletter - Studio Pipelette{% endblock %}
 
 {% block content_right %}
     <div class="card border-secondary mb-4 mt-4">
