--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes Commandes - SoSand{% endblock %}
+{% block title %}Mes Commandes - Studio Pipelette{% endblock %}
 
 {% block content_right %}
     <!-- Page Header intégré dans la colonne de droite -->
