--- a/templates/payment/cancel.html.twig
+++ b/templates/payment/cancel.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Paiement annulé - SoSand{% endblock %}
+{% block title %}Paiement annulé - Studio Pipelette{% endblock %}
 
 {% block content_right %}
 <div class="alert alert-warning">
