--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Paiement - SoSand{% endblock %}
+{% block title %}Paiement - Studio Pipelette{% endblock %}
 
 {% block content_right %}
 <div class="card border-secondary mb-4">
