--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,4 +1,4 @@
-<h1>Bienvenue sur So'Sand !</h1>
+<h1>Bienvenue sur Studio Pipelette !</h1>
 
 <p>
     Merci de votre inscription. Pour activer votre compte, veuillez cliquer sur le lien suivant : <br><br>
@@ -12,5 +12,5 @@
 
 <p>
     Cordialement,<br>
-    L'équipe So'Sand
+    L'équipe Studio Pipelette
 </p>
