--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -3,7 +3,7 @@
 <p>Bonjour {{ user.prenom }},</p>
 
 <p>
-    Vous avez demandé à réinitialiser votre mot de passe sur So'Sand.
+    Vous avez demandé à réinitialiser votre mot de passe sur Studio Pipelette.
     Pour créer un nouveau mot de passe, cliquez sur le lien suivant : <br><br>
     <a href="{{ url('app_home') }}?reset_token={{ resetToken }}">Réinitialiser mon mot de passe</a>.
 </p>
@@ -18,6 +18,6 @@
 
 <p>
     Cordialement,<br>
-    L'équipe So'Sand
+    L'équipe Studio Pipelette
 </p>
 
