--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Paiement confirmé - SoSand{% endblock %}
+{% block title %}Paiement confirmé - Studio Pipelette{% endblock %}
 
 {% block content_right %}
 <div class="alert alert-success">
