--- a/templates/caisse/sous_categorie/_form.html.twig
+++ b/templates/caisse/sous_categorie/_form.html.twig
@@ -10,6 +10,11 @@
             </div>
 
             <div class="mb-3">
+                {{ form_row(form.sousCategorie) }}
+                <div class="form-text">À renseigner uniquement si la catégorie parente est de type "Vente".</div>
+            </div>
+
+            <div class="mb-3">
                 <label class="form-label d-block fw-bold">Type de visuel</label>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="visuelType" id="typeColor" value="color" checked>
