--- a/templates/favoris/index.html.twig
+++ b/templates/favoris/index.html.twig
@@ -49,13 +49,24 @@
                                 <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                                     <div class="card product-item border-0 mb-4">
                                         <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                                            <a href="{{ path('app_article_show', {'slug': article.slug}) }}">
+                                            {% if article.visibilite == constant('App\\Entity\\Article::VISIBILITY_SHOP') or not article.actif %}
+                                                <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center" style="background: rgba(255,255,255,0.7); z-index: 10;">
+                                                    <span class="badge badge-danger">Non disponible en ligne</span>
+                                                </div>
                                                 {% if article.photos|length > 0 %}
-                                                    <img class="img-fluid w-100" src="{{ asset('assets/img/articles/' ~ article.id ~ '/' ~ article.photos|first.filename) }}" alt="{{ article.nom }}">
+                                                    <img class="img-fluid w-100 grayscale" src="{{ asset('assets/img/articles/' ~ article.id ~ '/' ~ article.photos|first.filename) }}" alt="{{ article.nom }}">
                                                 {% else %}
-                                                    <img class="img-fluid w-100" src="{{ asset('assets/img/product-1.jpg') }}" alt="{{ article.nom }}">
+                                                    <img class="img-fluid w-100 grayscale" src="{{ asset('assets/img/product-1.jpg') }}" alt="{{ article.nom }}">
                                                 {% endif %}
-                                            </a>
+                                            {% else %}
+                                                <a href="{{ path('app_article_show', {'slug': article.slug}) }}">
+                                                    {% if article.photos|length > 0 %}
+                                                        <img class="img-fluid w-100" src="{{ asset('assets/img/articles/' ~ article.id ~ '/' ~ article.photos|first.filename) }}" alt="{{ article.nom }}">
+                                                    {% else %}
+                                                        <img class="img-fluid w-100" src="{{ asset('assets/img/product-1.jpg') }}" alt="{{ article.nom }}">
+                                                    {% endif %}
+                                                </a>
+                                            {% endif %}
                                             
                                             {# Badge sous-catégorie ou catégorie à gauche #}
                                             {% if article.sousCategorie %}
@@ -83,9 +94,15 @@
                                         </div>
                                         <div class="card-footer bg-light border">
                                             <div class="d-flex justify-content-between align-items-center">
-                                                <a href="{{ path('app_article_show', {'slug': article.slug}) }}" class="btn btn-sm text-dark p-0">
-                                                    <i class="fas fa-eye text-primary mr-1"></i>Voir détails
-                                                </a>
+                                                {% if article.visibilite == constant('App\\Entity\\Article::VISIBILITY_SHOP') or not article.actif %}
+                                                    <span class="btn btn-sm text-muted p-0" style="cursor: not-allowed;">
+                                                        <i class="fas fa-eye-slash mr-1"></i>Indisponible
+                                                    </span>
+                                                {% else %}
+                                                    <a href="{{ path('app_article_show', {'slug': article.slug}) }}" class="btn btn-sm text-dark p-0">
+                                                        <i class="fas fa-eye text-primary mr-1"></i>Voir détails
+                                                    </a>
+                                                {% endif %}
                                                 <form method="post" action="{{ path('app_favoris_retirer', {id: article.id}) }}" style="display: inline;">
                                                     <button type="submit" class="btn btn-sm btn-danger p-0 px-2">
                                                         <i class="fa fa-trash"></i>
